// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] Webform factory Should display success message 1`] = `
<div>
  <form
    class="paragraph webform-paragraph webforms-form LoadingClassName"
    id="webform-anchor-si_test_webform"
    novalidate=""
  >
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkbox-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-selectfield-wrapper"
        >
          <div
            data-testid="webform-factory-selectfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          class="ButtonWrapperClassName"
          data-testid="webform-factory-submitbutton-wrapper"
        >
          <div
            data-testid="webform-factory-submitbutton"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`[Component] Webform factory Should render an alert with the default messge from props if the form has a restiricted status and the user is not logged in 1`] = `
<div>
  <div
    class=""
  >
    <div>
      Bitte melden Sie sich an, um dieses Formular auszufüllen.
    </div>
  </div>
</div>
`;

exports[`[Component] Webform factory Should render an alert with the info messge from props if the form has a restiricted status and the user is not logged in 1`] = `
<div>
  <div
    class=""
  >
    <div>
      Bitte 
      <strong>
        anmelden
      </strong>
       um das Formular zu sehen.
    </div>
  </div>
</div>
`;

exports[`[Component] Webform factory Should render correctly 1`] = `
<div>
  <form
    class="paragraph webform-paragraph webforms-form"
    id="webform-anchor-si_test_webform"
    novalidate=""
  >
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkbox-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-selectfield-wrapper"
        >
          <div
            data-testid="webform-factory-selectfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-checkboxes-radio-wrapper"
        >
          <div
            data-testid="webform-factory-multifield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          class="ButtonWrapperClassName"
          data-testid="webform-factory-submitbutton-wrapper"
        >
          <div
            data-testid="webform-factory-submitbutton"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`[Component] Webform factory Should render the form if the form does not have a restiricted status and the user is not logged in 1`] = `
<div>
  <form
    class="paragraph webform-paragraph webforms-form"
    id="webform-anchor-webform_hz_by_nz"
    novalidate=""
  >
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          class="ButtonWrapperClassName"
          data-testid="webform-factory-submitbutton-wrapper"
        >
          <div
            data-testid="webform-factory-submitbutton"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`[Component] Webform factory Should render the form if the form has a restiricted status and the user is logged in 1`] = `
<div>
  <form
    class="paragraph webform-paragraph webforms-form"
    id="webform-anchor-webform_hz_by_nz"
    novalidate=""
  >
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          data-testid="webform-factory-inputfield-wrapper"
        >
          <div
            data-testid="webform-factory-inputfield"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        data-testid="webform-factory-csstransition-wrapper"
      >
        <div
          class="ButtonWrapperClassName"
          data-testid="webform-factory-submitbutton-wrapper"
        >
          <div
            data-testid="webform-factory-submitbutton"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
